
pysmb-1.1.0, 1 June 2012
========================

- Adds SMB2 protocol implementation with signing for outgoing SMB2 messages.
  pysmb will utilize SMB2 protocol with servers that support SMB2
  (eg. Windows Vista, Windows 7 and Samba 3).
  If the remote server does not support SMB2, pysmb will fall back automatically
  to using SMB1 protocol.


pysmb-1.0.5, 7 May 2012
=======================

- Add supports for SMB message signing. pysmb will sign all SMB messages from
  the CIFS client to the server, but it does not verify the signatures of the
  SMB messages from the server.


pysmb-1.0.4, 1 May 2012
=======================

- Adds support for "smb://" URL in urllib2 python packages to retrieve or upload
  files from/to remote CIFS servers.
- Improve documentation


pysmb-1.0.3, 28 April 2012
===========================

- Fix a crash in SMB._storFile() method which occurs when the remote CIFS server
  utilizes a max raw size larger than 65535 bytes. The bug was discovered with
  Windows 7 Pro SP1.
- Fix a bug in SMB._listPath() method where the files/folders time information are
  not properly converted to Epoch time.
- Add NBNSProtocol.queryIPForName() and NetBIOS.queryIPForName() methods to
  query for a machine's NetBIOS name at the given IP address.
- Add SMBProtocol.retrieveFileFromOffset() and SMBConnection.retrieveFileFromOffset()
  methods for a finer control of file retrieval operation with read offset and write
  limits.


pysmb-1.0.2, 31 March 2012
==========================

- Fix a bug in SMB._handleSessionChallenge() method in base.py where the domain attribute
  was not used to generate the corresponding NTLM authentication packets, resulting in
  the default WORKGROUP domain for used for all subsequent authentications.

pysmb-1.0.1, 25 Jan 2012
========================

- Fixes a bug in listPath() method which causes directory listing for
  sub-directories to return an empty list.