@@ -1,12 +1,12 @@
 
 [server]
-name = MICHAEL-I5PC
-ip = 192.168.1.108
+name = SERVER
+ip = 192.168.1.1
 port = 139
 
 [client]
 name = TESTCLIENT
 
 [user]
-name = michael
-password = xundui64
+name = myuser
+password = mypassword
